--- a/utility.css
+++ b/utility.css
@@ -32,21 +32,17 @@
     padding: 10px;
 }
 
-/* Define the styles for the scrollbar */
 ::-webkit-scrollbar {
-    width: 10px; /* Width of the scrollbar */
+    width: 10px;
   }
   
-  /* Track styles */
   ::-webkit-scrollbar-track {
-    background: #333; /* Color of the track */
+    background: #333;
   }
   
-  /* Handle styles */
   ::-webkit-scrollbar-thumb {
-    background: #555; /* Color of the handle */
-    border-radius: 5px; /* Border radius of the handle */
+    background: #555; 
+    border-radius: 5px;
   }
-  
-  /* Handle on hover styles */
+    
   
