--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color:  black;
+    background-color: black;
     color: white;
 }
 
@@ -159,11 +159,12 @@ body {
 }
 
 .playbar{
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    background-color: rgb(198, 227, 198);
-    padding: 12px;
+    position: fixed;
+    bottom: 30px;
+    width: 70vw;
+    filter: invert(1);
+    background-color: white;
+    /* background: #0b0a0a; */
 }
 
 .songbutton{
@@ -171,3 +172,42 @@ body {
     justify-content: center;
     gap: 23px;
 }
+
+.songbutton button{
+    outline: none;
+    border:  none;
+    cursor: pointer;
+    background: white;
+}
+
+.songList{
+    height: 644px;
+    overflow-x: auto;
+}
+
+.songList ul {
+    padding: 15px 15px;
+}
+
+.songList ul li {
+    list-style-type: decimal;
+    padding: 10px 0px;
+    display: flex;
+    gap: 12px;
+    cursor: pointer;
+    border: 1px solid white;
+    margin: 12px 0px;
+    padding: 8px;
+    border-radius: 5px;
+    width: 300px;
+    justify-content: space-between;
+}
+
+.playnow{
+    display: flex;
+    width: 105px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
